--- a/web-app/ui/src/styles.css
+++ b/web-app/ui/src/styles.css
@@ -1,1 +1,12 @@
 /* Global styles */
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
+
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
